extension facebook finished

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extension Facebook</title>
     <script src="index.js" defer></script>
-</head>
-<body>
-    <button id="btn">CLICK</button>
-</body>
+  </head>
+  <body>
+    <h2>Modificar Login Facebook</h2>
+    <button id="btn-bg-red">SET BACKGROUND COLOR RED</button>
+    <button id="links-colors">SET COLOR LINKS</button>
+    <input type="color" id="link-color-picker" />
+    <button id="delete-images">DELETE IMAGES</button>
+    <button id="show-passwords">SHOW/ HIDE PASSWORDS</button>
+  </body>
 </html>
