--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extension Facebook</title>
     <script src="index.js" defer></script>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 10px;
+      }
+      button {
+        display: block;
+        margin: 10px 0;
+        padding: 10px;
+        width: 100%;
+        cursor: pointer;
+      }
+      input[type="color"] {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body>
     <h2>Modificar Login Facebook</h2>
