information images finished

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </head>
   <body>
     <h2>Modificar Login Facebook</h2>
-    <button id="btn-bg-red">SET BACKGROUND COLOR RED</button>
-    <button id="links-colors">SET COLOR LINKS</button>
+    <button id="btn-bg-red">Set background color red</button>
+    <button id="links-colors">Set color links</button>
     <input type="color" id="link-color-picker" />
-    <button id="delete-images">DELETE IMAGES</button>
-    <button id="show-passwords">SHOW/ HIDE PASSWORDS</button>
+    <button id="delete-images">Delete Images</button>
+    <button id="show-passwords">Show/Hide Passwords</button>
   </body>
 </html>
