--- a/extensionAmazon/index.html
+++ b/extensionAmazon/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="index.js" defer></script>
+    <style>
+      /* #menu {
+        position: fixed;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        background-color: #fff;
+        padding: 10px;
+        border: 2px solid black;
+        z-index: 9999;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+      } */
+    </style>
   </head>
   <body>
     <h2>Amazon Helper</h2>
-    <div>
+    <div id="menu">
       <button id="btn-img-info">Información Imágenes</button>
       <button id="btn-min-price">Precio Más Pequeño</button>
     </div>
