--- a/extensionAmazon/index.html
+++ b/extensionAmazon/index.html
@@ -4,26 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.1/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.1/css/sharp-thin.css"
+    />
     <script src="index.js" defer></script>
     <style>
-      /* #menu {
-        position: fixed;
-        top: 50%;
-        right: 10px;
-        transform: translateY(-50%);
-        background-color: #fff;
-        padding: 10px;
-        border: 2px solid black;
-        z-index: 9999;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-      } */
+      body {
+        font-family: "Arial", sans-serif;
+        background: #f0f4f7;
+        margin: 0;
+        padding: 20px;
+        text-align: center;
+        color: #333;
+      }
+      h2 {
+        font-size: 20px;
+        margin-bottom: 20px;
+        color: #000000;
+      }
+      .btn {
+        width: 100%;
+        margin: 10px 0;
+        padding: 12px;
+        font-size: 16px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s ease, transform 0.2s;
+      }
+      .btn:hover {
+        transform: scale(1.05);
+      }
+      #btn-img-info {
+        background-color: #007bff;
+        color: white;
+      }
+      #btn-min-price {
+        background-color: #28a745;
+        color: white;
+      }
+      .btn:focus {
+        outline: none;
+      }
     </style>
   </head>
   <body>
-    <h2>Amazon Helper</h2>
-    <div id="menu">
-      <button id="btn-img-info">Información Imágenes</button>
-      <button id="btn-min-price">Precio Más Pequeño</button>
-    </div>
+    <h2><i class="fa-brands fa-amazon fa-beat"></i> Amazon Helper</h2>
+    <button id="btn-img-info" class="btn">
+      <i class="fa-regular fa-image"></i> Información Imágenes
+    </button>
+    <button id="btn-min-price" class="btn">
+      <i class="fa-regular fa-circle-dollar"></i> Precio Más Pequeño
+    </button>
   </body>
 </html>
